# tradingV3

./: .codexignore  .env  .env.example  .gitignore  ASYNC_LOGGING_README.md  CAHIER_SPECIFICATIONS_KLINES_JSON.md  CLAUDE.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  CLEANUP_QUICKSTART.md  DISPATCHER_SYSTEM_SUMMARY.md  ENV_CONFIGURATION.md  FEATURES.md  LOGGING_SYSTEM_README.md  MtfService_Backfill_Simplification.php  README.md  ROLLBACK_INSTRUCTIONS.md  TODO.md  TradingV3_OKX_Hyperliquid_demo_testnet_prompts_canoniques_UNIQUE.md  agend.md  agents.md  check_new_format.sh  commit_preparation.patch  composer.json  dashboards_integration_complete.sh  docker-compose.workers.yml  docker-compose.yml  generate_test_logs.sh  grafana_dashboards_ready.sh  import_grafana_dashboard.sh  index.html  makefile  mkdocs.yml  quick-start-async-logging.sh  sf arb.txt  tables_schema.sql  test.php  test_dispatcher_system.sh  test_status_system.php  test_websocket_complete.php  test_websocket_data.php  (+3 more)
ITest/: test_indicators.sh
api_rate_limiter/: .env  Dockerfile  entrypoint.sh  script.py  worker.py
bitmart-ws-forwarder/: .env.example  Dockerfile  composer.json
bitmart_positions_sync/: Dockerfile  entrypoint.sh  requirements.txt
config_file/: README.md  dev.env  prod.env
cron_symfony_fetch_klines/: .dockerignore  .env  Dockerfile  (+5 more)
cron_symfony_mtf_workers/: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  worker.py
cron_symfony_mtf_workers/activities/: bridge_http.py  dashboard.py  mtf_http.py  orchestrator_http.py
cron_symfony_mtf_workers/bridge/: __init__.py  app.py  dashboard.py  dashboards.example.yaml  runner.py
cron_symfony_mtf_workers/dashboards/: __init__.py  aggregate.py  dashboards.example.yaml  model.py  orchestrate.py  runtime.py
cron_symfony_mtf_workers/docs/: ARCHITECTURE.md
cron_symfony_mtf_workers/models/: mtf_job.py
cron_symfony_mtf_workers/scripts/: manage_cleanup_schedule.py  manage_contract_sync_schedule.py  manage_dashboard_schedule.py  manage_demo_testnet_schedule.py  manage_exchange_profile_schedule.py  manage_mtf_workers_schedule.py  manage_orchestrator_schedule.py  manage_scalper_micro_schedule.py
cron_symfony_mtf_workers/scripts/new/: README.md  manage_mtf_workers_schedule.py
cron_symfony_mtf_workers/tests/: __init__.py  test_bridge_app.py  test_bridge_dashboard.py  test_bridge_runner.py  test_dashboard_activities.py  test_dashboard_model.py  test_dashboard_orchestrate.py  test_dashboard_runtime.py  test_legacy_deprecation.py  test_manage_dashboard_schedule.py  test_manage_demo_testnet_schedule.py  test_manage_exchange_profile_schedule.py  test_manage_orchestrator_schedule.py  test_mtf_job.py  test_orchestrator_workflow.py  test_response_formatter.py
cron_symfony_mtf_workers/utils/: __init__.py  legacy_deprecation.py  response_formatter.py
cron_symfony_mtf_workers/workflows/: mtf_dashboard.py  mtf_workers.py  orchestrator_cron.py
python-orchestrator/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
python-orchestrator/alembic/: env.py
python-orchestrator/alembic/versions/: 0001_init_orchestration_schema.py  0002_orchestration_locks.py  0003_run_claim_expires_at.py
python-orchestrator/app/: __init__.py  logging_config.py  main.py  schemas.py  settings.py
python-orchestrator/app/backtesting/: __init__.py  contracts.py
python-orchestrator/app/db/: __init__.py  base.py  engine.py  models.py  repositories.py
python-orchestrator/app/routers/: dashboards.py  health.py  metrics.py  orchestrator.py  runs.py
python-orchestrator/app/services/: correlation.py  live_guard.py  run_audit.py  run_metrics.py  sets.py  symfony_client.py
python-orchestrator/fixtures/runtime-recipe/: demo_exchanges_dashboard.json  fake_multi_profile_same_symbol.json  r1_r16_degraded_fake_dashboard.json  r1_r16_hyperliquid_dry_run_dashboard.json  r1_r16_nominal_fake_dashboard.json  r1_r16_okx_dry_run_dashboard.json
python-orchestrator/scripts/: __init__.py  runtime_recipe_runner.py
python-orchestrator/tests/: conftest.py  test_backtesting_contracts.py  test_correlation.py  test_dashboards_api.py  test_db_engine.py  test_db_models.py  test_db_postgres_smoke.py  test_db_repositories.py  test_health.py  test_integration_orchestrator_e2e.py  test_integration_symfony_contract.py  test_live_guard.py  test_logging_config.py  test_main.py  test_metrics_router.py  test_orchestration_locks.py  test_orchestrator_run.py  test_refresh_contracts_api.py  test_run_audit.py  test_run_metrics.py  test_runs_api.py  test_runtime_recipe_fixtures.py  test_runtime_recipe_runner.py  test_schemas.py  test_sets.py  test_settings.py  test_symfony_client.py
(+2825 files in other folders)
